# django2pydantic

./: .codacy.yaml  .coveragerc  .deepsource.toml  .flake8  .gitignore  .importlinter  .mypy.ini  .nitpick.toml  .pre-commit-config.yaml  .pylintrc.toml  .pyre_configuration  .ruff.toml  .shellcheckrc  .taplo.toml  .vale.ini  .yamllint.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE.txt  README.md  examples.ipynb  examples.py  mypy.ini  noxfile.py  playground.py  pyproject.toml  pyrightconfig.json  pytest-with-beartype.py  pytest-with-typeguard.py  pytest.ini  test_enum_descriptions.py  test_schema_extra.py
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  copilot-instructions.md  dependabot.yml
.github/prompts/: complement-existing-tests.prompt.md  test_plan.prompt.md  tests.prompt.md
.github/workflows/: cache-trunk.yml  cicd.yml  trunk-upgrade-and-check.yml  upgrade-trunk.yml
.trunk/: .gitignore  trunk.yaml
django2pydantic/: __init__.py  base.py  defaults.py  empty.py  getter.py  infer.py  mixin.py  registry.py  schema.py  types.py  utils.py
django2pydantic/handlers/: __init__.py  auto.py  base.py  boolean.py  file.py  handlers.py  json.py  network.py  numbers.py  property.py  relational.py  text.py  time.py
django2pydantic/handlers/contrib/django_pydantic_field/: schema_field.py
docs/: copilot-code-generation-instructions.md  copilot-commit-message-instructions.md  copilot-pull-request-description-instructions.md  copilot-review-instructions.md  copilot-test-instructions.md
examples/: __init__.py  django_setup.py  example.ipynb  inferring-fields-with-InferredField-helper.ipynb  making-fields-optional-with-InferExcept.ipynb  overriding-django-field-properties-with-InferExcept.ipynb
superschema/: __init__.py  base.py  defaults.py  getter.py  mixin.py  registry.py  schema.py  types.py
superschema/handlers/: __init__.py  auto.py  base.py  boolean.py  file.py  json.py  network.py  numbers.py  property.py  relational.py  text.py  time.py
superschema/handlers/contrib/: .gitkeep
tests/: apps.py  conftest.py  examples.ipynb  models.py  settings.py  test_advanced.py  test_all.py  test_basics.py  test_choices.py  test_error_messages.py  test_id_fields.py  test_inheriting_and_subclassing_works.py  test_jsonfield.py  test_number_fields.py  test_plan.md  test_property_method_fields.py  test_related_field_title_description.py  test_relations_are_supported.py  test_uuid_fields_are_supported.py  utils.py
tests/contrib/: __init__.py  test_schema_field.py
tests/migrations/: 0001_initial.py
